--- a/index.html
+++ b/index.html
@@ -4,10 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.scss">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <title>Whisbi Technical Test</title>
 </head>
 <body>
+    <main>
+        <div class="slider-container">
+            <div class="slider">
+                <picture>
+                    <source type="image/webp" media="(max-width: 415px)" srcset="/img/birds-snow-mobile.webp">
+                    <source type="image/webp" media="(max-width: 1024px)" srcset="/img/birds-snow-tablet.webp">
+                    <source type="image/webp" srcset="/img/birds-snow-desktop.webp">
+                    <source type="image/jpeg" media="(max-width: 415px)" srcset="/img/birds-snow-mobile.jpg">
+                    <source type="image/jpeg" media="(max-width: 1024px)" srcset="/img/birds-snow-tablet.jpg">
+                    <source type="image/jpeg" srcset="/img/birds-snow-desktop.jpg">
+                    <img src="/img/birds-snow-desktop.jpg" alt="Picture of birds in a snowy mountain">
+                </picture>
+                <picture>
+                    <source type="image/webp" media="(max-width: 415px)" srcset="/img/desert-mobile.webp">
+                    <source type="image/webp" media="(max-width: 1024px)" srcset="/img/desert-tablet.webp">
+                    <source type="image/webp" srcset="/img/desert-desktop.webp">
+                    <source type="image/jpeg" media="(max-width: 415px)" srcset="/img/desert-mobile.jpg">
+                    <source type="image/jpeg" media="(max-width: 1024px)" srcset="/img/desert-tablet.jpg">
+                    <source type="image/jpeg" srcset="/img/desert-desktop.jpg">
+                    <img src="/img/desert-desktop.jpg" alt="Picture of a desert">
+                </picture>
+                <picture>
+                    <source type="image/webp" media="(max-width: 415px)" srcset="/img/mountain-mobile.webp">
+                    <source type="image/webp" media="(max-width: 1024px)" srcset="/img/mountain-tablet.webp">
+                    <source type="image/webp" srcset="/img/mountain-desktop.webp">
+                    <source type="image/jpeg" media="(max-width: 415px)" srcset="/img/mountain-mobile.jpg">
+                    <source type="image/jpeg" media="(max-width: 1024px)" srcset="/img/mountain-tablet.jpg">
+                    <source type="image/jpeg" srcset="/img/mountain-desktop.jpg">
+                    <img src="/img/mountain-desktop.jpg" alt="Picture of a mountain">
+                </picture>
+            </div>
+            <div class="slider-control"></div>
+        </div>
+        <div class="container">
+            <i class="fas fa-spinner fa-spin"></i>
+            <div class="card">
+                <form class="input-holder">
+                    <input type="text" id="username" placeholder="Enter Git username...">
+                    <input type="submit" class="send"  value="Search">
+                </form>
+                <div class="message">
+                    <p class="info">Enter a Git username to get a list of repositories</p>
+                </div>
+            </div>
+            <div class="results-holder">
+                <div class="results"></div>
+            </div>
+        </div>
+    </main>
     <script src="./index.js"></script>
 </body>
 </html>
